--- a/gatekeeper/policy-gatekeeper-minreplicacount.yaml
+++ b/gatekeeper/policy-gatekeeper-minreplicacount.yaml
@@ -55,7 +55,7 @@ spec:
       apiVersion: policy.open-cluster-management.io/v1
       kind: ConfigurationPolicy
       metadata:
-        name: policy-gatekeeper-prod-ns
+        name: policy-gatekeeper-replicas
       spec:
         remediationAction: inform # will be overridden by remediationAction in parent policy
         severity: low
@@ -65,33 +65,17 @@ spec:
         object-templates:
         - complianceType: musthave
           objectDefinition:
-            apiVersion: templates.gatekeeper.sh/v1beta1
-            kind: ConstraintTemplate
+            apiVersion: constraints.gatekeeper.sh/v1beta1
+            kind: K8sMinReplicaCount
             metadata:
-              name: k8sminreplicacount
+              name: deployment-must-have-min-replicas
             spec:
-              crd:
-                spec:
-                  names:
-                    kind: K8sMinReplicaCount
-                  validation:
-                    # Schema for the `parameters` field
-                    openAPIV3Schema:
-                      properties:
-                        min:
-                          type: integer
-              targets:
-                - target: admission.k8s.gatekeeper.sh
-                  rego: |
-                    package k8sminreplicacount
-
-                    violation[{"msg": msg, "details": {"missing_replicas": missing}}] {
-                      provided := input.review.object.spec.replicas
-                      required := input.parameters.min
-                      missing := required - provided
-                      missing > 0
-                      msg := sprintf("you must provide %v more replicas", [missing])
-                    }
+              match:
+                kinds:
+                  - apiGroups: ["apps"]
+                    kinds: ["Deployment"]
+              parameters:
+                min: 2
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
