--- a/gatekeeper/policy-gatekeeper-minreplicacount.yaml
+++ b/gatekeeper/policy-gatekeeper-minreplicacount.yaml
@@ -74,6 +74,8 @@ spec:
                   kinds:
                     - apiGroups: ["apps"]
                       kinds: ["Deployment"]
+                  namespaces:
+                    - openshift-monitoring     
                 parameters:
                   min: 5
 ---
