--- a/gatekeeper/policy-gatekeeper-minreplicacount.yaml
+++ b/gatekeeper/policy-gatekeeper-minreplicacount.yaml
@@ -75,7 +75,7 @@ spec:
                     - apiGroups: ["apps"]
                       kinds: ["Deployment"]
                   namespaces:
-                    - openshift-monitoring     
+                    - deploymenttest     
                 parameters:
                   min: 1
   - objectDefinition:
