--- a/policy-subscription/subscription.yaml
+++ b/policy-subscription/subscription.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app: policies-demo
   annotations:
-    apps.open-cluster-management.io/github-path: policies
-    apps.open-cluster-management.io/github-branch: master
+    apps.open-cluster-management.io/github-path: gatekeeper
+    apps.open-cluster-management.io/github-branch: main
 spec:
   channel: policies/policies
   placement:
