--- a/gatekeeper/label-cluster.yaml
+++ b/gatekeeper/label-cluster.yaml
@@ -34,6 +34,18 @@ spec:
                   name: local-cluster
                 spec:
                   hubAcceptsClient: true
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: cluster.open-cluster-management.io/v1
+                kind: ManagedCluster
+                metadata:
+                  labels:
+                    deploy: all 
+                    environment: prod
+                  name: east2
+                spec:
+                  hubAcceptsClient: true                  
+                  
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
