--- a/gatekeeper/changereplicacount.yaml
+++ b/gatekeeper/changereplicacount.yaml
@@ -2,6 +2,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: policy-engineering-change-replicacount
+  namespace: 
   annotations:
     policy.open-cluster-management.io/standards: NIST-CSF
     policy.open-cluster-management.io/categories: PR.IP Information Protection Processes and Procedures
@@ -10,34 +11,35 @@ spec:
   remediationAction: enforce
   disabled: false
   policy-templates:
-    - objectDefinition:
-        apiVersion: policy.open-cluster-management.io/v1
-        kind: ConfigurationPolicy
-        metadata:
-          name: policy-change-replicacount
-        spec:
-          remediationAction: inform
-          severity: low
-          namespaceSelector:
-            exclude:
-              - kube-*
-            include:
-              - default
-          object-templates:
-            - complianceType: musthave
-              objectDefinition:
-                apiVersion: apps.open-cluster-management.io/v1
-                kind: PlacementRule
-                metadata:
-                  name: us-eu-region-clusters
-                  namespace: reverse-words-region
-                spec:
-                  clusterReplicas: 1
+  - objectDefinition:
+      apiVersion: policy.open-cluster-management.io/v1
+      kind: ConfigurationPolicy
+      metadata:
+        name: policy-change-replicacount
+      spec:
+        remediationAction: inform
+        severity: low
+        namespaceSelector:
+          exclude:
+            - kube-*
+          include:
+            - default
+        object-templates:
+          - complianceType: musthave
+            objectDefinition:
+              apiVersion: apps.open-cluster-management.io/v1
+              kind: PlacementRule
+              metadata:
+                name: us-eu-region-clusters
+                namespace: reverse-words-region
+              spec:
+                clusterReplicas: 1
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: binding-policy-engineering-change-replicacount
+  namespace: 
 placementRef:
   name: placement-policy-engineering-change-replicacount
   kind: PlacementRule
@@ -51,10 +53,11 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: placement-policy-engineering-change-replicacount
+  namespace: 
 spec:
   clusterConditions:
   - status: "True"
     type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: name, environment: In, values: ["dev"]}
+      - {key: local-cluster, operator: In, values: ["true"]}
