--- a/gatekeeper/gatekeeper-ns.yaml
+++ b/gatekeeper/gatekeeper-ns.yaml
@@ -44,6 +44,7 @@ spec:
                       - open-cluster-management-agent-addon
                       - openshift-sdn
                       - openshift-machine-config-operator 
+                      - openshift-machine-api 
                     processes:
                       - '*'
 ---
