--- a/gatekeeper/gatekeeper-ns.yaml
+++ b/gatekeeper/gatekeeper-ns.yaml
@@ -49,6 +49,9 @@ spec:
                       - openshift-ingress-operator
                       - openshift-ingress
                       - sdn-controller
+                      - openshift-cluster-csi-drivers
+                      - openshift-kube-controller-manager-operator
+                      - openshift-kube-controller-manager
                     processes:
                       - '*'
 ---
