validating /scale subresource

--- a/gatekeeper/policy-gatekeeper-minreplicacount.yaml
+++ b/gatekeeper/policy-gatekeeper-minreplicacount.yaml
@@ -80,6 +80,10 @@ spec:
                         - apps
                       kinds:
                         - Deployment
+                    - apiGroups:
+                        - autoscaling
+                      kinds:
+                        - Scale
                   namespaces:
                     - deploymenttest
                 parameters:
