--- a/gatekeeper/label-cluster.yaml
+++ b/gatekeeper/label-cluster.yaml
@@ -2,6 +2,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: policy-engineering-label-clusters
+  namespace: policies
   annotations:
     policy.open-cluster-management.io/standards: NIST-CSF
     policy.open-cluster-management.io/categories: PR.IP Information Protection Processes and Procedures
@@ -10,70 +11,71 @@ spec:
   remediationAction: enforce
   disabled: false
   policy-templates:
-    - objectDefinition:
-        apiVersion: policy.open-cluster-management.io/v1
-        kind: ConfigurationPolicy
-        metadata:
-          name: policy-label-clusters
-        spec:
-          remediationAction: inform
-          severity: low
-          namespaceSelector:
-            exclude:
-              - kube-*
-            include:
-              - default
-          object-templates:
-            - complianceType: musthave
-              objectDefinition:
-                apiVersion: cluster.open-cluster-management.io/v1
-                kind: ManagedCluster
-                metadata:
-                  labels:
-                    environment: dev
-                  name: local-cluster
-                spec:
-                  hubAcceptsClient: true
-            - complianceType: musthave
-              objectDefinition:
-                apiVersion: cluster.open-cluster-management.io/v1
-                kind: ManagedCluster
-                metadata:
-                  labels:
-                    deploy: all 
-                    environment: prod
-                  name: east2
-                spec:
-                  hubAcceptsClient: true   
-            - complianceType: musthave
-              objectDefinition:
-                apiVersion: cluster.open-cluster-management.io/v1
-                kind: ManagedCluster
-                metadata:
-                  labels:
-                    deploy: all 
-                    environment: prod
-                  name: east1
-                spec:
-                  hubAcceptsClient: true  
-            - complianceType: musthave
-              objectDefinition:
-                apiVersion: cluster.open-cluster-management.io/v1
-                kind: ManagedCluster
-                metadata:
-                  labels:
-                    deploy: all 
-                    environment: prod
-                  name: east3
-                spec:
-                  hubAcceptsClient: true                   
+  - objectDefinition:
+      apiVersion: policy.open-cluster-management.io/v1
+      kind: ConfigurationPolicy
+      metadata:
+        name: policy-label-clusters
+      spec:
+        remediationAction: inform
+        severity: low
+        namespaceSelector:
+          exclude:
+            - kube-*
+          include:
+            - default
+        object-templates:
+          - complianceType: musthave
+            objectDefinition:
+              apiVersion: cluster.open-cluster-management.io/v1
+              kind: ManagedCluster
+              metadata:
+                labels:
+                  environment: dev
+                name: local-cluster
+              spec:
+                hubAcceptsClient: true
+          - complianceType: musthave
+            objectDefinition:
+              apiVersion: cluster.open-cluster-management.io/v1
+              kind: ManagedCluster
+              metadata:
+                labels:
+                  deploy: all
+                  environment: prod
+                name: east2
+              spec:
+                hubAcceptsClient: true
+          - complianceType: musthave
+            objectDefinition:
+              apiVersion: cluster.open-cluster-management.io/v1
+              kind: ManagedCluster
+              metadata:
+                labels:
+                  deploy: all
+                  environment: prod
+                name: east1
+              spec:
+                hubAcceptsClient: true
+          - complianceType: musthave
+            objectDefinition:
+              apiVersion: cluster.open-cluster-management.io/v1
+              kind: ManagedCluster
+              metadata:
+                labels:
+                  deploy: all
+                  environment: prod
+                name: east3
+              spec:
+                hubAcceptsClient: true
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
-  name: binding-engineering-label-clusters
+  name: binding-policy-engineering-label-clusters
+  namespace: policies
 placementRef:
-  name: placement-engineering-label-clusters
+  name: placement-policy-engineering-label-clusters
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
@@ -84,11 +86,12 @@ subjects:
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
-  name: placement-engineering-label-clusters
+  name: placement-policy-engineering-label-clusters
+  namespace: policies
 spec:
   clusterConditions:
   - status: "True"
     type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: name, environment: In, values: ["dev"]}
+      []  # selects all clusters if not specified
