--- a/gatekeeper/policy-gatekeeper-operator.yaml
+++ b/gatekeeper/policy-gatekeeper-operator.yaml
@@ -7,7 +7,7 @@ metadata:
     policy.open-cluster-management.io/categories: CM Configuration Management
     policy.open-cluster-management.io/controls: CM-2 Baseline Configuration
 spec:
-  remediationAction: enforce
+  remediationAction: inform
   disabled: false
   policy-templates:
   - objectDefinition:
@@ -106,8 +106,9 @@ spec:
                   logLevel: INFO
                   replicas: 1
                 image:
-                  image: 'docker.io/openpolicyagent/gatekeeper:v3.2.2'
+                  image: 'docker.io/openpolicyagent/gatekeeper:v3.3.0'
                 validatingWebhook: Enabled
+                mutatingWebhook: Disabled
                 webhook:
                   emitAdmissionEvents: Enabled
                   logLevel: INFO
